--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
     "dotenv": "^16.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
