--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://bfunk54.github.io/react-portfolio",
+  "homepage": "https://bfunk54.github.io/React-Portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
