--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "react-scripts build && cp build/index.html build/404.html",
   },
   "eslintConfig": {
     "extends": [
