--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "homepage": "https://bfunk54.github.io/React-Portfolio/",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "dotenv": "^16.0.3",
     "gh-pages": "^4.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "gsap-trial": "^3.11.3",
+    "loaders.css": "^0.1.2",
+    "react": "18.1.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "18.1.0",
     "react-icons": "^4.7.1",
+    "react-loaders": "^3.0.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "mdb-react-ui-kit": "5.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
