--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,14 +19,14 @@
     "gh-pages": "^4.0.0",
     "gsap-trial": "^3.11.3",
     "loaders.css": "^0.1.2",
+    "mdb-react-ui-kit": "5.0.0",
     "react": "18.1.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.7.1",
     "react-loaders": "^3.0.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "mdb-react-ui-kit": "5.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
