--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-spring/three": "^9.5.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,8 @@
     "react-icons": "^4.7.1",
     "react-loaders": "^3.0.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
+    "react-three-fiber": "^6.0.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
