--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "dotenv": "^16.0.3",
+    "emailjs": "^4.0.1",
     "gh-pages": "^4.0.0",
     "gsap-trial": "^3.11.3",
     "loaders.css": "^0.1.2",
