--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.7.1",
     "react-inner-image-zoom": "^3.0.2",
     "react-loaders": "^3.0.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
     "react-three-fiber": "^6.0.13",
