--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://bfunk54.github.io/React-Portfolio/",
+  "homepage": "https://bfunk54.github.io/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
