finally fixed problems with the navbar, it all works and looks exactly as expected now

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.11.10",
     "@react-spring/three": "^9.5.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
@@ -23,6 +26,7 @@
     "hamburger-react": "^2.5.0",
     "loaders.css": "^0.1.2",
     "mdb-react-ui-kit": "5.0.0",
+    "mui": "^0.0.1",
     "react": "18.1.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.1.0",
