--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio",
+  "name": "ben_fein_portfolio",
   "version": "0.1.0",
   "homepage": "https://bfunk54.github.io/",
   "private": true,
